Finalize my website

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <h1>
     Midnight in the City
     </h1>
-    <p>
+    <p class="subtitle">
     A visual essay on silence, light, and movement after dark.
     </p>
-    <img src="images/city-hero.png" width="1000" alt="photo of burning city at night">
+    <img src="images/city-hero.png" alt="photo of burning city at night">
     </section>
 
     <section>
@@ -43,7 +43,9 @@
        </p>
 
        <blockquote id="blockquote"> 
-        “Cities have their own heartbeat after midnight.”
+        <p>
+        “Cities have their own heartbeat after midnight.” 
+        </p>
        </blockquote>
     </section>
 
